--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,19 +7,37 @@
     <string name="madeBy">Made by @EnriqueMoran</string>
     <string name="paired_devices_text">Select Bittle to connect:</string>
     <string name="connectig_bluetooth">Connecting to Bittle</string>
+    <string name="btn_rest">REST</string>
+    <string name="btn_GYRO">GYRO</string>
+    <string name="btn_shutdown">SHUTDOWN</string>
+    <string name="btn_step">STEP</string>
+    <string name="btn_crawl">CRAWL</string>
+    <string name="btn_walk">WALK</string>
+    <string name="btn_trot">TROT</string>
+    <string name="btn_run">RUN</string>
+    <string name="btn_bound">BOUND</string>
+    <string name="btn_greetings">GREET</string>
+    <string name="btn_pushup">PUSHUP</string>
+    <string name="btn_pee">PEE</string>
+    <string name="btn_stretch">STRETCH</string>
+    <string name="btn_sit">SIT</string>
+    <string name="btn_zero">ZERO</string>
+    <string name="btn_stand">STAND</string>
+    <string name="btn_disconnect">DISCONNECT</string>
+    <string name="mode_simple">CHANGE VIEW</string>
     <string name="instructions_details">
         <b>Pairing Bittle to your Android device:\n\n</b>
         \t\t1. Swipe down from the top of the screen.\n
         \t\t2. Touch and hold Bluetooth icon.\n
-        \t\t3. Tap <b>Connecting to Bittle:\n\n</b>.\n
+        \t\t3. Tap <i>Pair new device</i>.\n
         \t\t4. Tap the name of Bittle.\n
-        \t\t5. Use the following pin code: <b>Controlling Bittle:\n\n</b> or <i>Pair new device</i>.\n\n\n\n
+        \t\t5. Use the following pin code: <i>0000</i> or <i>1234</i>.\n\n\n\n
 
-        <i>0000</i>
-        \t\t1. In this App, tap <i>1234</i> button.\n
+        <b>Connecting to Bittle:\n\n</b>
+        \t\t1. In this App, tap <i>PAIRED DEVICES</i> button.\n
         \t\t2. Select Bittle in paired devices list.\n\n\n\n
 
-        <i>PAIRED DEVICES</i>
+        <b>Controlling Bittle:\n\n</b>
         \t\t· Use the Joystick to control Bittle\'s movement.\n
         \t\t· Tap <i>REST</i> to turn off Bittle\'s servos.\n
         \t\t· Tap <i>GYRO</i> to turn on/off Bittle\'s gyroscope.\n
